# serializer version: 1
# name: TestAcquire.test_ok
  dict({
    'acquired': True,
    'archived': False,
    'args': dict({
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    }),
    'created_at': str,
    'id': 'fb085f7f',
    'key': str,
    'ping': None,
    'progress': 3,
    'rights': dict({
    }),
    'stage': None,
    'state': 'preparing',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': str,
      }),
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': str,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'jobs_pathoscope_bowtie',
  })
# ---
# name: TestArchive.test_ok
  dict({
    'acquired': False,
    'archived': True,
    'args': dict({
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    }),
    'created_at': str,
    'id': '7cf872dc',
    'ping': None,
    'progress': 10,
    'rights': dict({
    }),
    'stage': 'NzFJEUSgqMReEKilxKJT',
    'state': 'preparing',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': str,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'step_description': 'bTDOKidKxUVFacqRcQYv',
        'step_name': 'NzFJEUSgqMReEKilxKJT',
        'timestamp': str,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
    'workflow': 'jobs_pathoscope_bowtie',
  })
# ---
# name: TestFind.test_archived[False]
  dict({
    'counts': dict({
      'preparing': dict({
        'jobs_pathoscope_bowtie': 1,
      }),
      'waiting': dict({
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      }),
    }),
    'documents': list([
      dict({
        'archived': False,
        'created_at': str,
        'id': 'f60bae36',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'jobs_pathoscope_bowtie',
      }),
      dict({
        'archived': False,
        'created_at': str,
        'id': 'da42dca3',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'jobs_build_index',
      }),
      dict({
        'archived': False,
        'created_at': str,
        'id': '7cf872dc',
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'jobs_pathoscope_bowtie',
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  })
# ---
# name: TestFind.test_archived[True]
  dict({
    'counts': dict({
      'preparing': dict({
        'jobs_pathoscope_bowtie': 1,
      }),
      'waiting': dict({
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      }),
    }),
    'documents': list([
      dict({
        'archived': True,
        'created_at': str,
        'id': '09d01419',
        'progress': 100,
        'stage': 'GapNGCiKyJNmNoZgTcnB',
        'state': 'complete',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'jobs_build_index',
      }),
      dict({
        'archived': True,
        'created_at': str,
        'id': '3cbb22cc',
        'progress': 30,
        'stage': 'NkznHZPGfxsRfFzDHwBJ',
        'state': 'error',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'jobs_nuvs',
      }),
    ]),
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  })
# ---
# name: TestFind.test_basic
  dict({
    'counts': dict({
      'cancelled': dict({
        'jobs_create_sample': 1,
      }),
      'complete': dict({
        'jobs_create_sample': 1,
      }),
      'error': dict({
        'jobs_aodp': 1,
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      }),
      'terminated': dict({
        'jobs_build_index': 1,
        'jobs_nuvs': 2,
      }),
      'timeout': dict({
        'jobs_aodp': 1,
      }),
      'waiting': dict({
        'jobs_aodp': 1,
        'jobs_nuvs': 1,
      }),
    }),
    'documents': list([
      dict({
        'archived': False,
        'created_at': str,
        'id': '9c61c0ca',
        'progress': 30,
        'stage': 'CvVtXeeYGAaIAXQZUmce',
        'state': 'terminated',
        'user': dict({
          'handle': 'zclark',
          'id': '7cf872dc',
        }),
        'workflow': 'jobs_build_index',
      }),
      dict({
        'archived': False,
        'created_at': str,
        'id': '7cce8f87',
        'progress': 50,
        'stage': 'nOHABdcaOhguYUqQeuEZ',
        'state': 'error',
        'user': dict({
          'handle': 'zclark',
          'id': '7cf872dc',
        }),
        'workflow': 'jobs_pathoscope_bowtie',
      }),
      dict({
        'archived': False,
        'created_at': str,
        'id': '83e4c4f6',
        'progress': 60,
        'stage': 'iLUYCkyqgDOaIrTOqeaP',
        'state': 'error',
        'user': dict({
          'handle': 'zclark',
          'id': '7cf872dc',
        }),
        'workflow': 'jobs_aodp',
      }),
      dict({
        'archived': False,
        'created_at': str,
        'id': '606cd773',
        'progress': 100,
        'stage': 'DTrfalRqlzXAreDlttNm',
        'state': 'complete',
        'user': dict({
          'handle': 'zclark',
          'id': '7cf872dc',
        }),
        'workflow': 'jobs_create_sample',
      }),
      dict({
        'archived': False,
        'created_at': str,
        'id': '031ff6cb',
        'progress': 60,
        'stage': 'GNkXjEpGpwJnLsgFiwud',
        'state': 'cancelled',
        'user': dict({
          'handle': 'zclark',
          'id': '7cf872dc',
        }),
        'workflow': 'jobs_create_sample',
      }),
    ]),
    'found_count': 11,
    'page': 1,
    'page_count': 3,
    'per_page': 5,
    'total_count': 11,
  })
# ---
# name: TestFind.test_state_invalid
  list([
    dict({
      'in': 'query string',
      'loc': list([
        'state',
        0,
      ]),
      'msg': "value is not a valid enumeration member; permitted: 'cancelled', 'complete', 'error', 'preparing', 'running', 'timeout', 'terminated', 'waiting'",
      'type': 'type_error.enum',
    }),
  ])
# ---
# name: TestPing.test_not_found
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: TestPushStatus.test[None]
  dict({
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  })
# ---
# name: TestPushStatus.test_bad_state
  dict({
    'errors': dict({
      'state': list([
        'unallowed value bad',
      ]),
    }),
    'id': 'invalid_input',
    'message': 'Invalid input',
  })
# ---
# name: TestPushStatus.test_error[invalid-invalid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-invalid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-invalid-valid]
  tuple(
    201,
    dict({
      'error': dict({
        'details': list([
          'Valid',
        ]),
        'traceback': list([
          'Valid',
        ]),
        'type': 'KeyError',
      }),
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-missing-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-missing-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-missing-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-valid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-valid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-valid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-invalid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-invalid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-invalid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-missing-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-missing-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-missing-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-valid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-valid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-valid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-invalid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-invalid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-invalid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-missing-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-missing-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-missing-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-valid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-valid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-valid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_missing_error
  tuple(
    400,
    dict({
      'id': 'bad_request',
      'message': 'Missing error information',
    }),
  )
# ---
# name: TestPushStatus.test_name_and_description
  dict({
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  })
# ---
# name: test_bulk_archive[None]
  list([
    dict({
      'archived': True,
      'created_at': '2019-03-07T23:20:30Z',
      'id': '7467tozj',
      'progress': 95,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
      'workflow': 'build_index',
    }),
    dict({
      'archived': True,
      'created_at': '2017-09-21T03:00:07Z',
      'id': '8cy4mjvp',
      'progress': 97,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
      'workflow': 'build_index',
    }),
    dict({
      'archived': True,
      'created_at': '2024-08-23T20:27:15Z',
      'id': '8vvqvnuk',
      'progress': 90,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
      'workflow': 'nuvs',
    }),
    dict({
      'archived': True,
      'created_at': '2021-08-30T04:32:27Z',
      'id': 'awvuon9b',
      'progress': 66,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
      'workflow': 'pathoscope',
    }),
    dict({
      'archived': True,
      'created_at': '2023-02-28T08:11:58Z',
      'id': 'sk1wj693',
      'progress': 82,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'bob',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_sample',
    }),
  ])
# ---
# name: test_cancel[None]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    }),
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 0,
    'rights': dict({
    }),
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      }),
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      }),
      dict({
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_get[None]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    }),
    'created_at': str,
    'id': '7cf872dc',
    'ping': None,
    'progress': 10,
    'rights': dict({
    }),
    'stage': 'NzFJEUSgqMReEKilxKJT',
    'state': 'preparing',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': str,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'step_description': 'bTDOKidKxUVFacqRcQYv',
        'step_name': 'NzFJEUSgqMReEKilxKJT',
        'timestamp': str,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
    'workflow': 'jobs_pathoscope_bowtie',
  })
# ---
